Fix nowrap

--- a/src/styles/Section.css
+++ b/src/styles/Section.css
@@ -116,6 +116,9 @@
   text-transform: uppercase;
   margin-right: 15px;
   margin-bottom: 0;
+}
+
+#about .section-title {
   white-space: nowrap;
 }
 
